--- a/package.json
+++ b/package.json
@@ -1,29 +1,38 @@
 {
-  "name": "react-store",
+  "name": "@axtk/react-store",
   "version": "1.0.0",
+  "description": "React store and related hooks for shared state management",
   "main": "index.js",
   "scripts": {
     "build": "npx esbuild index.js --bundle --outfile=index.build.js --global-name=ReactStore",
     "build:min": "npm run build -- --minify"
   },
   "keywords": [
-    "shared state",
     "store",
-    "react"
+    "shared state",
+    "react",
+    "react hooks"
   ],
   "author": "axtk",
-  "license": "ISC",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/axtk/react-store.git"
+  },
   "dependencies": {
-    "store": "github:axtk/store"
+    "@axtk/store": "^1.1.1"
   },
   "peerDependencies": {
     "react": ">16.8"
   },
   "devDependencies": {
-    "esbuild": "^0.8.42",
+    "esbuild": "^0.8.52",
     "esm": "^3.2.25"
   },
   "browser": {
-    "react": "./react.external.js"
+    "react": "./external.react.js"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
