--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@axtk/react-store",
   "version": "1.3.3",
-  "description": "React store and related hooks for shared state management",
+  "description": "React store and the related hook for shared state management",
   "main": "index.js",
   "scripts": {
     "build": "npx esbuild index.js --bundle --outfile=index.build.js --global-name=ReactStore",
@@ -20,7 +20,7 @@
     "url": "git://github.com/axtk/react-store.git"
   },
   "dependencies": {
-    "@axtk/store": "^1.3.1"
+    "@axtk/store": "^1.3.2"
   },
   "peerDependencies": {
     "react": ">16.8"
