--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "@axtk/react-store",
   "version": "1.3.11",
   "description": "React store and the related hook for shared state management",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "npx esbuild index.js --bundle --outfile=index.build.js --global-name=ReactStore",
-    "build:min": "npm run build -- --minify"
+    "build": "esbuild dist/index.js --bundle --outfile=index.build.js --global-name=ReactStore",
+    "build:min": "npm run build -- --minify",
+    "tsc": "tsc"
   },
   "keywords": [
     "store",
@@ -20,14 +21,16 @@
     "url": "git://github.com/axtk/react-store.git"
   },
   "dependencies": {
-    "@axtk/store": "^1.3.3"
+    "@axtk/store": "^1.3.4",
+    "@types/react": "^17.0.3"
   },
   "peerDependencies": {
     "react": ">16.8"
   },
   "devDependencies": {
     "esbuild": "^0.8.52",
-    "esm": "^3.2.25"
+    "esm": "^3.2.25",
+    "typescript": "^4.2.3"
   },
   "browser": {
     "react": "./external.react.js"
