--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@axtk/react-store",
   "version": "1.3.17",
-  "description": "React store and the related hook for shared state management",
+  "description": "Compact shared-state management in React",
   "main": "dist/index.js",
   "scripts": {
     "build": "esbuild dist/index.js --bundle --outfile=index.build.js --global-name=ReactStore",
