--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@axtk/store": "^1.3.9",
-    "@types/react": "^17.0.3"
+    "@types/react": ">16.8"
   },
   "peerDependencies": {
     "react": ">16.8"
