--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "url": "git://github.com/axtk/react-store.git"
   },
   "dependencies": {
-    "@axtk/store": "^1.3.11",
-    "@types/react": ">16.8"
+    "@axtk/store": "^1.3.13"
   },
   "peerDependencies": {
     "react": ">16.8"
   },
   "devDependencies": {
-    "esbuild": "^0.8.52",
+    "@types/react": ">16.8",
+    "esbuild": "^0.12.15",
     "esm": "^3.2.25",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.5"
   },
   "browser": {
     "react": "./external.react.js"
